# RoboCupJapanOpen2019_dspl_GoGetIt

./: README.md
catkin_ws/src/em_door_detect/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/em_door_detect/launch/: em_door_detect.launch
catkin_ws/src/em_door_detect/src/: em_door_client.py  em_door_detect_srv.py
catkin_ws/src/em_follow_me/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/em_follow_me/action/: follow_me.action
catkin_ws/src/em_follow_me/launch/: em_depth_threshold_image.launch  em_follow_me.launch  em_follow_me_action.launch  em_follow_me_data.launch  em_follow_me_hsrnav.launch  em_follow_me_srv.launch  em_follow_me_test.launch  em_point_cloud.launch  em_trace_person.launch  follow_me.rviz
catkin_ws/src/em_follow_me/src/: deg45.csv  em_demo.py  em_depth_threshold_image.py  em_follow_me_action.py  em_follow_me_client.py  em_follow_me_forDataset.py  em_follow_me_hsrnav.py  em_follow_me_srv.py  em_follow_me_withDepth.py  em_neck.py  em_point_cloud.py  em_test.py  em_trace_person.py
catkin_ws/src/em_follow_me/src/dataset/: output12.csv  output13.csv  output18.csv  output19.csv  output2.csv  output20.csv  output23.csv  output24.csv  output25.csv  output26.csv  output29.csv  output3.csv  output33.csv  output34.csv  output36.csv  output37.csv  output38.csv  output4.csv  output40.csv  output41.csv  output42.csv  output45.csv  output49.csv  output51.csv  output52.csv  output53.csv  output55.csv  output56.csv  output57.csv  output6.csv  output61.csv  output64.csv  output65.csv  output66.csv  output67.csv  output68.csv  output70.csv  output71.csv  output76.csv  output77.csv  (+13 more)
catkin_ws/src/em_follow_me/src/dataset_all/: output1.csv  output10.csv  output100.csv  output101.csv  output102.csv  output104.csv  output106.csv  output108.csv  output109.csv  output11.csv  output112.csv  output113.csv  output114.csv  output115.csv  output117.csv  output123.csv  output124.csv  output129.csv  output130.csv  output137.csv  output14.csv  output140.csv  output141.csv  output142.csv  output145.csv  output146.csv  output147.csv  output148.csv  output149.csv  output15.csv  output151.csv  output153.csv  output154.csv  output156.csv  output157.csv  output158.csv  output16.csv  output161.csv  output163.csv  output164.csv  (+57 more)
catkin_ws/src/em_follow_me/src/dataset_new/: output1.csv  output14.csv  output16.csv  output17.csv  output18.csv  output19.csv  output20.csv  output23.csv  output24.csv  output25.csv  output26.csv  output29.csv  output3.csv  output30.csv  output31.csv  output32.csv  output33.csv  output34.csv  output36.csv  output37.csv  output41.csv  output42.csv  output48.csv  output5.csv  output50.csv  output53.csv  output57.csv  output58.csv  output60.csv  output65.csv  output66.csv  output67.csv  output69.csv  output70.csv  output71.csv  output75.csv  output77.csv  output8.csv  output83.csv  output85.csv  (+11 more)
catkin_ws/src/em_follow_me/srv/: follow_me.srv
catkin_ws/src/em_map_record/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/em_map_record/launch/: em_map_record_cli.launch  em_map_record_srv.launch  em_online_slam.launch  em_online_slam.rviz
catkin_ws/src/em_map_record/src/: em_map_image.py  em_map_pose.py  em_map_record_cli.py  em_map_record_srv.py
catkin_ws/src/em_map_record/srv/: map_image.srv
catkin_ws/src/em_spco_formation/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/em_spco_formation/launch/: em_spcof_data_srv.launch  em_spcof_learn_srv.launch  em_spcof_name2place_srv.launch  em_spcof_place2name_srv.launch  em_spcof_srv.launch
catkin_ws/src/em_spco_formation/result/default/: mu.csv  pi.csv  word.csv
catkin_ws/src/em_spco_formation/result/default/sigma/: 0.csv  1.csv  2.csv
catkin_ws/src/em_spco_formation/src/: __init__.py  em_spcof_client.py  em_spcof_data.py  em_spcof_data_image.py  em_spcof_data_pose.py  em_spcof_data_word.py  em_spcof_data_yolo.py  em_spcof_learn.py  em_spcof_name2place.py  em_spcof_place2name.py  em_spcof_rviz.py
catkin_ws/src/em_spco_formation/srv/: spcof_data.srv  spcof_learn.srv  spcof_name2place.srv  spcof_place2name.srv  spcof_rviz.srv  spcof_word.srv  spcof_yolo.srv
catkin_ws/src/em_tf2/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/em_tf2/launch/: em_tf2_srv.launch
catkin_ws/src/em_tf2/src/: em_tf2_cli.py  em_tf2_srv.py
catkin_ws/src/em_tf2/srv/: em_tf2.srv
catkin_ws/src/hsr_launch/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/hsr_launch/config/darknet_ros/: ros.yaml  yolov3-isb-tidy.yaml
catkin_ws/src/hsr_launch/config/darknet_ros/cfg/: yolov3-isb-tidy.cfg
catkin_ws/src/hsr_launch/config/gazebo/launch/: em_hsrb_gazebo_common.xml  hsr_gazebo_start_simulator.launch  hsrb_empty_world.launch  hsrb_gazebo_common.xml  hsrb_gazebo_make_map.launch  hsrb_gazebo_start_simulator.launch  nrp_spawn_urdf.launch
catkin_ws/src/hsr_launch/config/gazebo/script/: hsr_collison_planningscene.py  hsr_put_object_random_stage2.py
catkin_ws/src/hsr_launch/config/octomap/: hsr_getdata_octomap_static.py  hsr_planningscene_octomap_both.py  hsr_planningscene_octomap_dynamic.py  hsr_planningscene_octomap_static.py  hsr_planningscene_octomap_static_only_ps.py  hsrb_gazebo.yaml  static_debug.py
catkin_ws/src/hsr_launch/config/rviz/: hsr_default.rviz  hsr_demo.rviz  hsr_moveit.rviz  hsr_record_tidy.rviz  wrs_fcsc.rviz  wrs_prc_final.rviz
catkin_ws/src/hsr_launch/launch/: as_julius_default.launch  cv_detect_object_default.launch  cv_detect_object_demo.launch  cv_detect_object_init.launch  darknet_ros_yolo_default.launch  em_door_detect_default.launch  em_follow_me_default.launch  em_led_control_default.launch  em_map_record_default.launch  em_spco_formation_default.launch  em_spco_mapping_default.launch  em_spco_tidy_up_default.launch  em_spco_transfer_default.launch  em_speech_default.launch  flexbe_app_default.launch  hsr_common_cv_detect_object.launch  hsr_common_darknet_ros.launch  hsr_extra_default.launch  hsr_gazebo_default.launch  hsr_gazebo_test.launch  hsr_octomap_complex.launch  hsr_octomap_default.launch  hsr_rviz_default.launch  tmc_moveit_default.launch
(+186 files in other folders)
