<?xml version="1.0"?>
<package format="2">
  <name>em_tf2</name>
  <version>1.0.0</version>
  <description>The 'em_tf2' package converts coordinates/poses between two reference frames.</description>

  <maintainer email="yoshiki.tabuchi@em.ci.ritsumei.ac.jp">Yoshiki Tabuchi</maintainer>
  <license>MIT</license>
  <url type="website">http://em.ci.ritsumei.ac.jp/</url>
  <author email="yoshiki.tabuchi@em.ci.ritsumei.ac.jp">Yoshiki Tabuchi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>
